Creado tablero de juego

--- a/index.html
+++ b/index.html
@@ -7,6 +7,50 @@
   <title>Juega 4 en raya!</title>
 </head>
 <body>
+  <div class="tablero">
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+    <div class="celda"></div>
+  </div>
   <script src="index.js"></script>
 </body>
 </html>
