Cambios estilos de tablero

--- a/index.html
+++ b/index.html
@@ -8,49 +8,62 @@
 </head>
 <body>
   <div class="tablero">
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-    <div class="celda"></div>
-  </div>
+    <div class="columna">
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+    </div>
+    <div class="columna">
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+    </div>
+    <div class="columna">
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+    </div>
+    <div class="columna">
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+    </div>
+    <div class="columna">
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+    </div>
+    <div class="columna">
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+    </div>
+    <div class="columna">
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+      <div class="celda"></div>
+    </div>
   <script src="index.js"></script>
 </body>
 </html>
