--- a/index.html
+++ b/index.html
@@ -9,60 +9,60 @@
 <body>
   <div class="tablero">
     <div class="columna">
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
+      <div class="celda c1"></div>
+      <div class="celda c1"></div>
+      <div class="celda c1"></div>
+      <div class="celda c1"></div>
+      <div class="celda c1"></div>
+      <div class="celda c1"></div>
     </div>
     <div class="columna">
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
+      <div class="celda c2"></div>
+      <div class="celda c2"></div>
+      <div class="celda c2"></div>
+      <div class="celda c2"></div>
+      <div class="celda c2"></div>
+      <div class="celda c2"></div>
     </div>
     <div class="columna">
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
+      <div class="celda c3"></div>
+      <div class="celda c3"></div>
+      <div class="celda c3"></div>
+      <div class="celda c3"></div>
+      <div class="celda c3"></div>
+      <div class="celda c3"></div>
     </div>
     <div class="columna">
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
+      <div class="celda c4"></div>
+      <div class="celda c4"></div>
+      <div class="celda c4"></div>
+      <div class="celda c4"></div>
+      <div class="celda c4"></div>
+      <div class="celda c4"></div>
     </div>
     <div class="columna">
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
+      <div class="celda c5"></div>
+      <div class="celda c5"></div>
+      <div class="celda c5"></div>
+      <div class="celda c5"></div>
+      <div class="celda c5"></div>
+      <div class="celda c5"></div>
     </div>
     <div class="columna">
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
+      <div class="celda c6"></div>
+      <div class="celda c6"></div>
+      <div class="celda c6"></div>
+      <div class="celda c6"></div>
+      <div class="celda c6"></div>
+      <div class="celda c6"></div>
     </div>
     <div class="columna">
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
-      <div class="celda"></div>
+      <div class="celda c7"></div>
+      <div class="celda c7"></div>
+      <div class="celda c7"></div>
+      <div class="celda c7"></div>
+      <div class="celda c7"></div>
+      <div class="celda c7"></div>
     </div>
   <script src="index.js"></script>
 </body>
