Agregado div faltante

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       <div class="celda c7"></div>
       <div class="celda c7"></div>
     </div>
+  </div> 
   <script src="index.js"></script>
 </body>
 </html>
