Agregada ventana que anuncia ganador

--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
       <div class="celda c7"></div>
     </div>
   </div> 
+  <div id="ventana">
+    <p id="texto-ganador">Jugador gana!</p>
+    <button id="btn-jugardenuevo">Jugar de nuevo</button>
+  </div>
   <script src="index.js"></script>
 </body>
 </html>
