Agregada funcionalidad al boton de volver a jugar

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </div> 
   <div id="ventana">
     <p id="texto-ganador">Jugador gana!</p>
-    <button id="btn-jugardenuevo">Jugar de nuevo</button>
+    <button id="btn-jugardenuevo" onclick="ReiniciarJuego()">Jugar de nuevo</button>
   </div>
   <script src="index.js"></script>
 </body>
